# py_proj_template

./: .gitignore  404.html  README.md  _config.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
999_reference/: index.html
docs/: 999_reference.md
py_proj_template/: main.py
scripts/: install_dependencies.bat  venv_setup_dev.bat  venv_setup_main.bat
search/: search_index.json
src/: __int__.py  py_module.py  py_uml_gen_gui.py
tests/: __int__.py  test_demo_tc.py  test_my_package.py  test_py_uml_gen_gui.py
