[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py_uml_gen_gui"
authors = [{name = "chaitu-ycr", email = "chaiu.ycr@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
]
dynamic = ["version", "description"]
requires-python = ">=3.6"
dependencies = [
    "pylint",
    "graphviz",
    "PySimpleGUI",
]

[project.urls]
Home = "https://github.com/chaitu-ycr/py_uml_gen_gui"
